k8s-resource-manifests/vault/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: vault
  namespace: sodalite-services
spec:
  containers:
  - name: vault
    image: library/vault
    resources:
      limits:
        cpu: "2"
        memory: "8G"
      requests:
        cpu: "0.5"
        memory: "512M"
    securityContext:
      capabilities:
        add: ["IPC_LOCK"]
    ports:
    - containerPort: 8200
    volumeMounts:
      - mountPath: "/vault/file"
        name: vault-pv-storage
  volumes:
    - name: vault-pv-storage
      persistentVolumeClaim:
        claimName: vault-pv-claim
