k8s-resource-manifests/vault/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: sodalite-services
spec:
  selector:
    app: vault
  ports:
  - port: 8200
    protocol: TCP
    name: vault
